[package]
name = "blusbrs"
version = "0.0.0-zero.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.8"
panic-itm = "0.4"
nb = "0.1"
cortex-m-semihosting = "0.3"
stm32f1 = "0.8"
cortex-m-rtfm = "0.4"
usb-device = "0.2"
usbd-serial = "0.1"
stm32-usbd = { version = "0.3", features = ["stm32f103xx"] }
stm32f1xx-hal = { version = "0.4", features = ["stm32f103", "rt"] }
